[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/polycat.dae" type="PackedScene" id=2]
[ext_resource path="res://scenes/Hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/CamBase.gd" type="Script" id=4]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 1.4, 0.0, 0, 0 ]

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0 ), 0.0, 1.4, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape" id=1]
radius = 0.3
height = 0.61384

[sub_resource type="CylinderShape" id=3]
radius = 0.2
height = 0.2

[sub_resource type="CylinderShape" id=4]
radius = 0.66
height = 0.77

[sub_resource type="CylinderShape" id=5]
radius = 0.44
height = 0.25

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
acceleration_curve = SubResource( 6 )
deceleration_curve = SubResource( 7 )

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.622699, 0 )
shape = SubResource( 1 )

[node name="CamBase" type="SpringArm" parent="."]
collision_mask = 2
spring_length = 7.0
margin = 0.2
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="CamBase"]
current = true
far = 1200.0

[node name="Graphics" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.000535011, 0.00337076, -0.00414824 )

[node name="FootBox" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0733814, 0 )
collision_layer = 2
collision_mask = 2

[node name="FootBoxShape" type="CollisionShape" parent="FootBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0782034, 0 )
shape = SubResource( 3 )

[node name="MidBox" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0622558, 0 )
collision_layer = 2
collision_mask = 2

[node name="MidBoxShape" type="CollisionShape" parent="MidBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00111949, 0.462594, 0.000500679 )
shape = SubResource( 4 )

[node name="HeadBox" type="Area" parent="."]
collision_layer = 2
collision_mask = 2

[node name="HeadBoxShape" type="CollisionShape" parent="HeadBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19544, 0 )
shape = SubResource( 5 )

[node name="Hud" parent="." instance=ExtResource( 3 )]

[editable path="Graphics"]
